--- a/2_Fundamentos/25_Modulos_externos/package.json
+++ b/2_Fundamentos/25_Modulos_externos/package.json
@@ -1,7 +1,7 @@
 {
   "name": "25_modulos_externos",
   "version": "1.0.0",
-  "description": "Estudo sobre npm",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
